--- a/index.html
+++ b/index.html
@@ -194,6 +194,75 @@
                   </div>
             </div>
         </section>
+        <!-- happy clients -->
+        <section class="my-24">
+            <h2 class="text-4xl font-semibold text-center mb-14">Happy <span class="text-bike-primary">Clients says</span></h2>
+            <div class="grid gap-6  grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+              <!-- 1ST review -->
+              <div class="card  p-9 bg-base-100 border border-gray-400">
+                <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="rating justify-center">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                  <div class="text-center space-y-4 mt-4">
+                      <h4 class="font-semibold text-sm text-info">Regina Miles</h4>
+                      <p>Banker</p>
+                  </div>
+                </div>
+              </div>
+              <!-- 2nd review -->
+              <div class="card  p-9 bg-base-100 border border-gray-400">
+                <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="rating justify-center">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                  <div class="text-center space-y-4 mt-4">
+                      <h4 class="font-semibold text-sm text-info">Regina Miles</h4>
+                      <p>Banker</p>
+                  </div>
+                </div>
+              </div>
+              <!-- 3rd review -->
+              <div class="card p-9 bg-base-100 border border-gray-400">
+                <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="rating justify-center">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                  <div class="text-center space-y-4 mt-4">
+                      <h4 class="font-semibold text-sm text-info">Regina Miles</h4>
+                      <p>Banker</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
