--- a/index.html
+++ b/index.html
@@ -263,6 +263,69 @@
               </div>
             </div>
         </section>
+        <!-- FAQ -->
+        <Section class="my-24">
+          <h2 class="text-4xl font-semibold text-center mb-14">Frequently Asked  <span class="text-bike-primary">Questions</span></h2>
+          <div class="hero min-h-screen ">
+            <div class="hero-content flex-col lg:gap-24 lg:flex-row-reverse">
+              <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <!-- 1st ques -->
+                <div class="collapse collapse-arrow">
+                  <input type="radio" name="my-accordion-2" checked="checked" /> 
+                  <div class="collapse-title text-xl font-medium">
+                    "What are the most important things I should
+                    know about riding a bike?"
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <!-- 2nd ques -->
+                <div class="collapse collapse-arrow ">
+                  <input type="radio" name="my-accordion-2" /> 
+                  <div class="collapse-title text-xl font-medium">
+                    "How can I tell if my helmet is old and I need a 
+                    new one ?"
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <!-- 3rd ques -->
+                <div class="collapse collapse-arrow ">
+                  <input type="radio" name="my-accordion-2" /> 
+                  <div class="collapse-title text-xl font-medium">
+                    "Click to open this one and close others"
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>YES</p>
+                  </div>
+                </div>
+                <!-- 4th ques -->
+                <div class="collapse collapse-arrow ">
+                  <input type="radio" name="my-accordion-2" /> 
+                  <div class="collapse-title text-xl font-medium">
+                    "Click to open this one and close others"
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>YES</p>
+                  </div>
+                </div>
+                <!-- 5th ques -->
+                <div class="collapse collapse-arrow ">
+                  <input type="radio" name="my-accordion-2" /> 
+                  <div class="collapse-title text-xl font-medium">
+                    "Click to open this one and close others"
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>YES</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </Section>
     </main>
 </body>
 </html>
