--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <!-- FAQ -->
         <Section class="my-24">
           <h2 class="text-4xl font-semibold text-center mb-14">Frequently Asked  <span class="text-bike-primary">Questions</span></h2>
-          <div class="hero min-h-screen ">
+          <div class="hero">
             <div class="hero-content flex-col lg:gap-24 lg:flex-row-reverse">
               <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
               <div>
@@ -327,5 +327,18 @@
           </div>
         </Section>
     </main>
+    <footer class="footer p-10 bg-neutral text-neutral-content">
+      <div>
+        <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+      </div> 
+      <div>
+        <span class="footer-title">Social</span> 
+        <div class="grid grid-cols-1 gap-4">
+          <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+          <a><img class="w-36" src="images/others/android.png" alt=""></a>
+          
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
