--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light" lang="en">
+<html lang="en" data-theme="valentine">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -78,7 +78,7 @@
                     <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                 </div>
                 <div class="flex-1">
-                    <img src="/images/slider/bike1.png" class="w-[400px]" />
+                    <img src="/images/slider/bike3.png" class="w-[400px]" />
                 </div>
              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -118,7 +118,7 @@
                         <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-[400px]" />
+                        <img src="/images/slider/bike1.png" class="w-[400px]" />
                     </div>
                   </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -336,9 +336,9 @@
         <div class="grid grid-cols-1 gap-4">
           <a><img class="w-36" src="images/others/ios.png" alt=""></a>
           <a><img class="w-36" src="images/others/android.png" alt=""></a>
-          
         </div>
       </div>
     </footer>
+    <section>this is </section>
 </body>
 </html>
