--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                 </div>
                 <div class="flex-1">
-                    <img src="/images/slider/bike3.png" class="w-[400px]" />
+                    <img src="./images/slider/bike3.png" class="w-[400px]" />
                 </div>
              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -98,7 +98,7 @@
                     <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                 </div>
                 <div class="flex-1">
-                    <img src="/images/slider/bike2.png" class="w-[400px]" />
+                    <img src="./images/slider/bike2.png" class="w-[400px]" />
                 </div>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -118,7 +118,7 @@
                         <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                        <img src="./images/slider/bike1.png" class="w-[400px]" />
                     </div>
                   </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -138,7 +138,7 @@
                         <button class="text-white bg-bike-primary p-2 rounded-md">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-[400px]" />
+                        <img src="./images/slider/bike4.png" class="w-[400px]" />
                     </div>
                   </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -161,7 +161,7 @@
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- 1st card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -172,7 +172,7 @@
                   </div>
                 <!-- 2nd card --> 
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest3.png" alt="" /></figure>
+                    <figure><img src="./images/others/latest3.png" alt="" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Motorcycles & Scooters</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -183,7 +183,7 @@
                   </div>
                 <!-- 3rd card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">2021 Honda CBR500R</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -200,7 +200,7 @@
             <div class="grid gap-6  grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
               <!-- 1ST review -->
               <div class="card  p-9 bg-base-100 border border-gray-400">
-                <figure><img class="w-36" src="/images/others/user-1.png" alt="" /></figure>
+                <figure><img class="w-36" src="./images/others/user-1.png" alt="" /></figure>
                 <div class="card-body">
                   <p>Slate helps you see how 
                     many more days you need 
@@ -221,7 +221,7 @@
               </div>
               <!-- 2nd review -->
               <div class="card  p-9 bg-base-100 border border-gray-400">
-                <figure><img class="w-36" src="/images/others/user-2.png" alt="" /></figure>
+                <figure><img class="w-36" src="./images/others/user-2.png" alt="" /></figure>
                 <div class="card-body">
                   <p>Slate helps you see how 
                     many more days you need 
@@ -242,7 +242,7 @@
               </div>
               <!-- 3rd review -->
               <div class="card p-9 bg-base-100 border border-gray-400">
-                <figure><img class="w-36" src="/images/others/user-3.png" alt="" /></figure>
+                <figure><img class="w-36" src="./images/others/user-3.png" alt="" /></figure>
                 <div class="card-body">
                   <p>Slate helps you see how 
                     many more days you need 
@@ -268,7 +268,7 @@
           <h2 class="text-4xl font-semibold text-center mb-14">Frequently Asked  <span class="text-bike-primary">Questions</span></h2>
           <div class="hero">
             <div class="hero-content flex-col lg:gap-24 lg:flex-row-reverse">
-              <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+              <img src="./images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
               <div>
                 <!-- 1st ques -->
                 <div class="collapse collapse-arrow">
@@ -329,7 +329,7 @@
     </main>
     <footer class="footer p-10 bg-neutral text-neutral-content">
       <div>
-        <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+        <p>Khalid  Industries Ltd.<br/>Providing reliable tech since 1992</p>
       </div> 
       <div>
         <span class="footer-title">Social</span> 
